Switch back to debhelper level 9

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ tomcat8 (8.5.11-1~bpo7+1) wheezy-backports-sloppy; urgency=medium
     - Depend on openjdk-7 instead of openjdk-6 which is the default in Wheezy
     - Modified the tests to compile and run with the versions of JUnit,
       Hamcrest and EasyMock available in Wheezy
+    - Switch back to debhelper level 9
 
  -- Emmanuel Bourg <ebourg@apache.org>  Tue, 31 Jan 2017 22:58:42 +0100
 
