Removed the tomcat8-examples package

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ tomcat8 (8.5.11-1~bpo7+1) wheezy-backports-sloppy; urgency=medium
     - Modified the tests to compile and run with the versions of JUnit,
       Hamcrest and EasyMock available in Wheezy
     - Switch back to debhelper level 9
+    - Removed the tomcat8-examples package
 
  -- Emmanuel Bourg <ebourg@apache.org>  Tue, 31 Jan 2017 22:58:42 +0100
 
