--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 tomcat8 (8.5.11-2) unstable; urgency=medium
 
   * Team upload.
-  * Fix the following security vulnerabilities:
+  * Fix the following security vulnerabilities (Closes: #860068):
+    Thanks to Salvatore Bonaccorso for the report.
    - CVE-2017-5647:
      A bug in the handling of the pipelined requests when send file was used
      resulted in the pipelined request being lost when send file processing of
@@ -29,6 +30,7 @@ tomcat8 (8.5.11-2) unstable; urgency=medium
      processor cache twice. This could result in the same Processor being used
      for multiple requests which in turn could lead to unexpected errors and/or
      response mix-up.
+  *  debian/control: tomcat8: Fix Lintian error and depend on lsb-base.
 
  -- Markus Koschany <apo@debian.org>  Wed, 12 Apr 2017 09:58:46 +0200
 
