--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-tomcat8 (8.5.12-1) UNRELEASED; urgency=medium
+tomcat8 (8.5.12-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream release
     - Refreshed the patches
 
- -- Emmanuel Bourg <ebourg@apache.org>  Tue, 18 Apr 2017 09:50:28 +0200
+ -- Emmanuel Bourg <ebourg@apache.org>  Tue, 18 Apr 2017 09:53:23 +0200
 
 tomcat8 (8.5.11-2) unstable; urgency=medium
 
