--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.5.13-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release
+    - Removed the CVE patches (fixed in this release)
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Fri, 21 Apr 2017 00:48:06 +0200
+
 tomcat8 (8.5.12-1) unstable; urgency=medium
 
   * Team upload.
