--- a/java/org/apache/jasper/resources/LocalStrings_fr.properties
+++ b/java/org/apache/jasper/resources/LocalStrings_fr.properties
@@ -151,7 +151,7 @@ jsp.error.no.more.content=Fin de contenu alors que l''\u00e9valution n''\u00e9ta
 jsp.error.parse.xml=Erreur d''\u00e9valuation XML sur le fichier {0}
 jsp.error.parse.xml.line=Erreur d''\u00e9valuation XML sur le fichier  {0}: (ligne {1}, col {2})
 jsp.error.parse.xml.scripting.invalid.body=Le corps de l''\u00e9l\u00e9ment {0} ne doit contenir aucun \u00e9l\u00e9ments XML
-jsp.error.internal.tldinit=Exception lors de l'initialisation de TldLocationsCache: {0}
+jsp.error.internal.tldinit=Exception lors de l''initialisation de TldLocationsCache: {0}
 jsp.error.internal.filenotfound=Erreur interne: Fichier {0} introuvable
 jsp.error.parse.xml.invalidPublicId=PUBLIC ID invalide: {0}
 jsp.error.unsupported.encoding=Encodage non support\u00e9: {0}
@@ -161,7 +161,7 @@ jsp.error.taglibDirective.missing.location=Ni l''uri' ni l''attribut 'tagdir' n'
 jsp.error.invalid.tagdir=Le r\u00e9pertoire du fichier Tag {0} ne commence pas par \"/WEB-INF/tags\"
 #jspx.error.templateDataNotInJspCdata=Erreur de validation: l''\u00e9l\u00e9ment &lt;{0}&gt; ne peut avoir de donn\u00e9es template. Les donn\u00e9es Template doivent \u00eatre encapsul\u00e9es \u00e0 l''int\u00e9rieur d''un \u00e9l\u00e9ment &lt;jsp:cdata&gt;. [JSP1.2 PFD section 5.1.9]\nDonn\u00e9e Template en erreur: {1}
 #Erreur lors du traitement du fichier jar de la taglib {0}: {1}
-jsp.error.needAlternateJavaEncoding=L''encodage java par d\u00e9faut {0} est incorrect sur votre environnement java. Une alternative peut \u00eatre indiqu\u00e9e via le param\u00eatre 'javaEncoding' de la JspServlet.
+jsp.error.needAlternateJavaEncoding=L''encodage java par d\u00e9faut {0} est incorrect sur votre environnement java. Une alternative peut \u00eatre indiqu\u00e9e via le param\u00eatre ''javaEncoding'' de la JspServlet.
 #Erreur lors de la compilation, utilis\u00e9 pour la ligne jsp des messages d''erreur
 jsp.error.single.line.number=Une erreur s''est produite \u00e0 la ligne: {0} dans le fichier jsp: {1}
 jsp.error.corresponding.servlet=Erreur de servlet g\u00e9n\u00e9r\u00e9e:\n
@@ -169,7 +169,7 @@ jsp.error.jspbody.required=Doit utiliser jsp:body pour indiqu\u00e9 le corps de 
 jsp.error.jspbody.emptybody.only=Le tag {0} ne peut avoir que jsp:attribute dans son corps.
 jsp.error.no.scriptlets=Les \u00e9l\u00e9ments de Scripting ( <%!, <jsp:declaration, <%=, <jsp:expression, <%, <jsp:scriptlet ) ne sont pas autoris\u00e9s ici.
 jsp.error.tld.fn.invalid.signature=Synthaxe invalide pour la signature de fonction dans la TLD.  Librairie de Tag : {0}, Fonction: {1}
-jsp.error.tld.fn.invalid.signature.parenexpected=Synthaxe invalide pour la signature de fonction dans la TLD.  Parenth\u00e8se '(' attendue.  Librairie de Tag: {0}, Fonction: {1}.
+jsp.error.tld.fn.invalid.signature.parenexpected=Synthaxe invalide pour la signature de fonction dans la TLD.  Parenth\u00e8se ''('' attendue.  Librairie de Tag: {0}, Fonction: {1}.
 jsp.error.dynamic.attributes.not.implemented=Le tag {0} indique qu''il accepte des attributs dynamics mais n''impl\u00e9mente pas l''interface requise
 jsp.error.attribute.noequal=Symbole \u00e9gal (equal) attendu
 jsp.error.attribute.noquote=Symbole guillemet (quote) attendu
