Refreshed the patches

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.5.15-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release
+    - Refreshed the patches
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Wed, 21 Jun 2017 13:00:15 +0200
+
 tomcat8 (8.5.14-2) unstable; urgency=high
 
   * Team upload.
