--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.5.16-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release
+    - Refreshed the patches
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 26 Jun 2017 14:56:03 +0200
+
 tomcat8 (8.5.15-1) unstable; urgency=medium
 
   * Team upload.
