--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-tomcat8 (8.5.16-1) UNRELEASED; urgency=medium
+tomcat8 (8.5.16-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream release
     - Refreshed the patches
   * Standards-Version updated to 4.0.0
 
- -- Emmanuel Bourg <ebourg@apache.org>  Mon, 26 Jun 2017 14:56:03 +0200
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 26 Jun 2017 16:03:53 +0200
 
 tomcat8 (8.5.15-1) unstable; urgency=medium
 
