--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
-tomcat8 (8.5.16-2) UNRELEASED; urgency=medium
+tomcat8 (8.5.17-1) UNRELEASED; urgency=medium
 
   * Team upload.
+
+  [ Emmanuel Bourg ]
+  * New upstream release
+    - Refreshed the patches
+
+  [ Miguel Landaeta ]
   * Remove myself from uploaders. (Closes: #871892)
   * Update copyright info.
 
