--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.5.16-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Remove myself from uploaders. (Closes: #XXXXXX)
+
+ -- Miguel Landaeta <nomadium@debian.org>  Thu, 10 Aug 2017 21:46:34 +0100
+
 tomcat8 (8.5.16-1) unstable; urgency=medium
 
   * Team upload.
