--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 tomcat8 (8.5.16-2) UNRELEASED; urgency=medium
 
   * Team upload.
-  * Remove myself from uploaders. (Closes: #XXXXXX)
+  * Remove myself from uploaders. (Closes: #871892)
   * Update copyright info.
 
  -- Miguel Landaeta <nomadium@debian.org>  Thu, 10 Aug 2017 21:48:14 +0100
