--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.5.23-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Oct 2017 23:58:19 +0200
+
 tomcat8 (8.5.21-1) unstable; urgency=medium
 
   * Team upload.
